@@ -323,7 +323,7 @@ RELATED_DOC_POD_TAG     = uuid
 # same category and date but have different file names and still be
 # unique. Disabled by default and not generally recommended.
 
-STORY_URI_WITH_FILENAME = No
+STORY_URI_WITH_FILENAME = Yes
 
 # Story slugs. Disable ALLOW_SLUGLESS_NONFIXED if you want to prevent
 # non-fixed (i.e. non-Cover) stories from being slugless. Enabled by default.
